--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@
 
 # Site settings
 title: Rock the earth
-email: benmelosh@gmail.com
+#email: benmelosh@gmail.com
 url: https://example.github.io
-description: A portfolio of recent projects, maps and geoscience tools.
+description: A portfolio of recent projects.
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -39,9 +39,9 @@ footer: BenjiDa
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: https://twitter.com/rolltheturbines
-    symbol: twitter
+  # - title: twitter
+  #   url: https://twitter.com/rolltheturbines
+  #   symbol: twitter
   - title: google scholar
     url: https://scholar.google.com/citations?user=8ijDU1MAAAAJ&hl=en
     symbol: google scholar
@@ -51,23 +51,23 @@ social:
   - title: linkedin
     url: https://www.linkedin.com/in/ben-melosh-7043a859/
     symbol: linkedin
-  - title: publications
-    url: publications
-    symbol: graduation-cap
-  - title: curriculum vitae
-    url: /pdf/CV.pdf
-    symbol: university
+  # - title: publications
+  #   url: publications
+  #   symbol: graduation-cap
+  # - title: curriculum vitae
+  #   url: /pdf/CV.pdf
+  #   symbol: university
 
-tools:
-  - title: XRD analyser
-    url: https://github.com/BenjiDa/xrd_analyzer
-    symbol: calculator
-  - title: Fractal finder
-    url: https://github.com/BenjiDa/fractal_finder
-    symbol: calculator
-  - title: Flowstress calculator
-    url: /flowstress
-    symbol: calculator
+# tools:
+#   - title: XRD analyser
+#     url: https://github.com/BenjiDa/xrd_analyzer
+#     symbol: calculator
+#   - title: Fractal finder
+#     url: https://github.com/BenjiDa/fractal_finder
+#     symbol: calculator
+#   - title: Flowstress calculator
+#     url: /flowstress
+#     symbol: calculator
 
 
 
