--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ color:
   links: '#219ab3'
 
 # Footer settings
-footer: BenjiDa
+#footer: BenjiDa
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
