--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,8 @@
 title: Rock the earth
 #email: benmelosh@gmail.com
 url: https://example.github.io
-description: A portfolio of recent projects.
+description: Ben Melosh, PhD 
+A portfolio of recent projects.
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
